--- a/styles.css
+++ b/styles.css
@@ -206,7 +206,7 @@ a:hover {
     background-size: 60px 25px;
     z-index: 0;
     opacity: 0.7;
-    cursor: pointer;
+    cursor: default;
     pointer-events: all;
     user-select: none;
     -webkit-user-select: none;
@@ -268,6 +268,9 @@ a:hover {
     .cta-container {
         flex-direction: column;
         align-items: center;
+    }
+    .cursor-trail {
+        display: none;
     }
 }
 
