--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Sora:wght@400;600&family=Open+Sans:wght@400;600&display=swap');
+
 :root {
     --primary-color: #1a5d1a;
     --secondary-color: #2d8a2d;
@@ -14,8 +16,6 @@
     padding: 0;
     box-sizing: border-box;
 }
-
-@import url('https://fonts.googleapis.com/css2?family=Sora:wght@400;600&family=Open+Sans:wght@400;600&display=swap');
 
 body {
     font-family: var(--body-font);
@@ -389,6 +389,9 @@ h1, h2, .logo-text {
     padding: 2px 6px;
     border-radius: 4px;
     overflow: hidden;
+    line-height: 21px;
+    display: flex;
+    align-items: center;
 }
 
 .refresh-icon {
